--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
+coverage==5.5
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-idna==3.1
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
 pycparser==2.20
+python-coveralls==2.9.3
+PyYAML==5.4.1
+requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.3.23
+urllib3==1.26.3
 Werkzeug==1.0.1
 WTForms==2.3.3
